objects/CMPL123CME__Investigation__c.object
<CustomObject>
    <description>INVESTIGATION AND ROOT CAUSE INFORMATION</description>
    <fields>
        <fullName>Approve_1_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approve 1 Done By</description>
        <inlineHelpText>Approve 1 Done By</inlineHelpText>
        <label>Approve 1 Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations_Evaluations6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approve_2_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approve 1 Done By</description>
        <inlineHelpText>Approve 1 Done By</inlineHelpText>
        <label>Approve 2 Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations_Evaluations7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approve_3_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approve 3 Done By</description>
        <label>Approve 3 Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations_Evaluations8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_All_Copies_of_Patient_Data_Destroyed__c</fullName>
        <inlineHelpText>If yes, did you follow corporate procedure on protection of patient data (SOP 031664 - Corporate Procedure to Protect Patient Data)?</inlineHelpText>
        <label>If Yes, SOP 031664 followed</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BMX_Patient_Data_Copied_to_BMX_System__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMX_Approver_1_Approved_On__c</fullName>
        <label>Approver 1 Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations_Evaluations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Approver_2_Approved_On__c</fullName>
        <label>Approver 2  Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations_Evaluations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Approver_3_Approved_On__c</fullName>
        <label>Approver 3  Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations_Evaluations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_CAPA_Justification__c</fullName>
        <label>No CAPA Justification</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_CAPA_Number__c</fullName>
        <label>CAPA Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_CAPA_Required__c</fullName>
        <label>CAPA Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMX_Cancel_Investigation_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancel Investigation By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations_EvaluationsFUwQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Cancel_Investigation_On__c</fullName>
        <label>Cancel Investigation On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Case_External__c</fullName>
        <formula>CMPL123CME__Complaint__r.BMX_Case_External__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case External</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Comments_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workflow History Comments Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMX_Complaint_Ticket_No__c</fullName>
        <formula>CMPL123CME__Complaint__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complaint Ticket No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Complaint_Workflow_Status__c</fullName>
        <formula>CMPL123CME__Complaint__r.CMPL123CME__CMPL123_WF_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complaint Workflow Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Complete_Expert_Investigation_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complete Expert Investigation By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations_EvaluationsFUwF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Complete_Expert_Investigation_On__c</fullName>
        <label>Complete Expert Investigation On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Complete_Investigation_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complete Investigation By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations_EvaluationsFUw0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Complete_Investigation_On__c</fullName>
        <label>Complete Investigation On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Containment_Correction_Action__c</fullName>
        <label>Containment/Correction Action</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Correction_Required__c</fullName>
        <label>Correction Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMX_Count_of_GCS_Approvers__c</fullName>
        <formula>1+(
IF(ISBLANK(BMX_Approver_1__c),0,1)+
IF(ISBLANK(BMX_Approver_2__c),0,1)+
IF(ISBLANK(BMX_Approver_3__c),0,1)+
IF(ISBLANK(BMX_Approver_4__c),0,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of  Approvers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMX_Date_Product_Received__c</fullName>
        <label>Date Product Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Days_Open__c</fullName>
        <formula>IF(CMPL123_WF_Status__c = 'Closed - Done', 
     BMX_Investigation_Closed_Date__c - DATEVALUE(CreatedDate), 
     TODAY() - DATEVALUE(CreatedDate) 
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMX_Description__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_EstimatedInvestigationDuration_Date__c</fullName>
        <label>Estimated Investigation Duration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Evidence_of_Trend__c</fullName>
        <label>Evidence of Trend</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Expert_Investigation_Details__c</fullName>
        <label>Expert Investigation Details</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Expert_Investigation_End_Date__c</fullName>
        <label>Expert Investigation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Expert_Investigation_Start_Date__c</fullName>
        <label>Expert Investigation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Expert_Investigator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expert Investigator</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Investigations/Evaluations</relationshipLabel>
        <relationshipName>Investigations_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Expert_Investigator_text__c</fullName>
        <label>Expert Investigator (non-TWD)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_FAB_Justification__c</fullName>
        <label>No FAB Justification</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_FAB_Required__c</fullName>
        <label>FAB Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMX_First_Investigation_Closed_Date__c</fullName>
        <label>First Investigation Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_INV_Reject_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>INV Reject Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations_EvaluationsFRZR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Impact_Analysis__c</fullName>
        <label>Impact Analysis</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Invest_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invest Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMX_Investigation_Answer__c</fullName>
        <label>Investigation Answer</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Investigation_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investigation Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations_Evaluations5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Investigation_Approved_On__c</fullName>
        <label>Investigation Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Investigation_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investigation Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations_EvaluationsFF0F</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Investigation_Closed_Date__c</fullName>
        <label>Last Investigation Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Investigation_Details__c</fullName>
        <label>Investigation Details</label>
        <length>25000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Is_there_a_trend__c</fullName>
        <label>Is there a trend?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMX_Number_of_Questions_Unanswered__c</fullName>
        <label>Number of Questions Unanswered</label>
        <summaryFilterItems>
            <field>CMPL123CME__Investigation_Items__c.CMPL123CME__Completed__c</field>
            <operation>notEqual</operation>
            <value>Yes, No, N/A</value>
        </summaryFilterItems>
        <summaryForeignKey>CMPL123CME__Investigation_Items__c.CMPL123CME__Investigation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BMX_Patient_Data_Copied_to_BMX_System__c</fullName>
        <inlineHelpText>Have data containing Patient Health Information been copied from customer site to any bioMerieux system for this investigation?</inlineHelpText>
        <label>Patient data copied to BMX system?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMX_Product_Returned__c</fullName>
        <label>Product Returned?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Return Requested</fullName>
                </value>
                <value>
                    <fullName>Product Return Not Requested</fullName>
                </value>
                <value>
                    <fullName>Product Return Not Received</fullName>
                </value>
                <value>
                    <fullName>Product Return Received</fullName>
                </value>
                <value>
                    <fullName>Product Return Cancelled</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMX_Reject_1_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reject 1 Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations_EvaluationsFAL8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Reject_2_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reject 2  Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations_EvaluationsFAMa</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Reject_3_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reject 3  Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations_EvaluationsFANs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Rejected_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rejected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations_EvaluationsFUvR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Rejected_On__c</fullName>
        <label>Rejected On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Reopened_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reopened By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations_EvaluationsFUvq</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Reopened_On__c</fullName>
        <label>Reopened On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Require_Expert_Investigation_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Require Expert Investigation By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations_EvaluationsFUwZ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Require_Expert_Investigation_On__c</fullName>
        <label>Require Expert Investigation On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Return_Comments__c</fullName>
        <label>Return Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Rework_Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rework Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Investigations_EvaluationsFUwo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Rework_Requested_On__c</fullName>
        <label>Rework Requested On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Update_closed_date__c</fullName>
        <formula>BMX_Investigation_Closed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Update closed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>B_Choice1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>B Choice1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__EU_MIR_Code__c.Name</field>
                <operation>startsWith</operation>
                <value>B</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__EU_MIR_Code__c</referenceTo>
        <relationshipLabel>Investigations/Evaluations</relationshipLabel>
        <relationshipName>Investigations_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>B_Investigation_Conclusion_Choice_1__c</fullName>
        <label>B-Investigation Conclusion-Choice 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Investigation_Conclusion_Choice_1_del__c</fullName>
        <label>B-Investigation Conclusion-Choice 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Investigation_Findings_Code_Choic_del1__c</fullName>
        <label>B-Investigation Findings Code-Choice 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Investigation_Findings_Code_Choic_del2__c</fullName>
        <label>B-Investigation Findings Code-Choice 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Investigation_Findings_Code_Choic_del3__c</fullName>
        <label>B-Investigation Findings Code-Choice 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Investigation_Findings_Code_Choice_1__c</fullName>
        <label>B-Investigation Findings Code-Choice 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Investigation_Findings_Code_Choice_2__c</fullName>
        <label>B-Investigation Findings Code-Choice 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Investigation_Findings_Code_Choice_3__c</fullName>
        <label>B-Investigation Findings Code-Choice 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Investigation_TypeCode_Choice_1__c</fullName>
        <label>B-Investigation Type Code-Choice 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Code_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>B_Choice_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_Investigation_TypeCode_Choice_2__c</fullName>
        <label>B-Investigation Type Code-Choice 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Code_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>B_Choice_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_Investigation_Type_Code_Choice_1__c</fullName>
        <label>Type/Method Choice 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>B_Choice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_Investigation_Type_Code_Choice_2__c</fullName>
        <label>Type/Method Choice 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>B_Choice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_Investigation_Type_Code_Choice_3__c</fullName>
        <label>Type/Method Choice 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>B_Choice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CChoiceParent1__c</fullName>
        <label>C Choice Parent1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>C_Choice_Parent1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint</label>
        <referenceTo>CMPL123CME__Complaint__c</referenceTo>
        <relationshipName>Investigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Findings_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Findings Code</description>
        <label>Findings Code</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
                <operation>equals</operation>
                <value>FINDING CODE</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>Investigations/Evaluations (Findings Code)</relationshipLabel>
        <relationshipName>Investigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Investigation_Completed_Date__c</fullName>
        <label>Investigation Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Investigation_Due_Date__c</fullName>
        <label>Investigation Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Key_Value__c</fullName>
        <label>Key Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Overdue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Product_Name__c</fullName>
        <formula>CMPL123CME__Complaint__r.CMPL123CME__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__RCA__c</fullName>
        <description>RCA</description>
        <label>RCA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Root_Cause_Coding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Cause Code</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
                <operation>equals</operation>
                <value>ROOT CAUSE CODE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>Investigations/Evaluations (Root Cause Code)</relationshipLabel>
        <relationshipName>Investigations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Root_Cause__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Root Cause</description>
        <label>Root Cause</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
                <operation>equals</operation>
                <value>ROOT CAUSE CODE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>Investigations/Evaluations (Root Cause)</relationshipLabel>
        <relationshipName>Investigations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Total_Score__c</fullName>
        <label>Total Score</label>
        <summarizedField>CMPL123CME__Investigation_Items__c.CMPL123CME__Score__c</summarizedField>
        <summaryForeignKey>CMPL123CME__Investigation_Items__c.CMPL123CME__Investigation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Total_Weight__c</fullName>
        <label>Total Weight</label>
        <summarizedField>CMPL123CME__Investigation_Items__c.CMPL123CME__Weight__c</summarizedField>
        <summaryForeignKey>CMPL123CME__Investigation_Items__c.CMPL123CME__Investigation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123Task_Key_Value__c</fullName>
        <label>Task Field Update Key Value</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CMPL123CMEInvestigationcCMPL123_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Investigation_Findings_CodeChoice_1__c</fullName>
        <label>C-Investigation Findings Code-Choice 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CChoiceParent1__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>C_Choice_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_Investigation_Findings_Code_Choic_del1__c</fullName>
        <label>C-Investigation Findings Code-Choice 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Investigation_Findings_Code_Choic_del2__c</fullName>
        <label>C-Investigation Findings Code-Choice 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Investigation_Findings_Code_Choic_del3__c</fullName>
        <label>C-Investigation Findings Code-Choice 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Investigation_Findings_Code_Choice1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Findings/Results Choice 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__EU_MIR_Code__c.Name</field>
                <operation>startsWith</operation>
                <value>C</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__EU_MIR_Code__c</referenceTo>
        <relationshipLabel>Investigations/Evaluations</relationshipLabel>
        <relationshipName>Investigations_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C_Investigation_Findings_Code_Choice2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Findings/Results Choice 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__EU_MIR_Code__c.Name</field>
                <operation>startsWith</operation>
                <value>C</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__EU_MIR_Code__c</referenceTo>
        <relationshipLabel>Investigations/Evaluations (C-Investigation Findings Code-Choice 2)</relationshipLabel>
        <relationshipName>Investigations_Evaluations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C_Investigation_Findings_Code_Choice3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Findings/Results Choice 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__EU_MIR_Code__c.Name</field>
                <operation>startsWith</operation>
                <value>C</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__EU_MIR_Code__c</referenceTo>
        <relationshipLabel>Investigations/Evaluations (C-Investigation Findings Code-Choice 3)</relationshipLabel>
        <relationshipName>Investigations_Evaluations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C_Investigation_Findings_Code_Choice_1__c</fullName>
        <label>C-Investigation Findings Code-Choice 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>C_Choice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_Investigation_Findings_Code_Choice_2__c</fullName>
        <label>C-Investigation Findings Code-Choice 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>C_Choice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_Investigation_Findings_Code_Choice_3__c</fullName>
        <label>C-Investigation Findings Code-Choice 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>C_Choice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_Investigation_Findings_Code_Choice_del__c</fullName>
        <label>C-Investigation Findings Code-Choice 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Type__c</fullName>
        <label>Code Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>INV_EVL_Code_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complaint_description__c</fullName>
        <label>Complaint Description</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Correction_Number__c</fullName>
        <label>Correction Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Optional_Approvals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count of  Approvals</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>